--- a/catalog-list.html
+++ b/catalog-list.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Hello World</title>
+    <title>CreativeGoods</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
@@ -67,7 +67,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-sm-12 col-md-5">
                         <div class="brand-wrap">
-                            <img class="logo" src="images/logo2.png">
+                            <a href="index.html"><img class="logo" src="images/logo2.png"></a>
                         </div> <!-- brand-wrap.// -->
                     </div>
                     <div class="col-lg-5 col-sm-12 col-md-7">
@@ -241,7 +241,7 @@
                                         <h6 class="title">Product type</h6>
                                     </a>
                                 </header>
-                                <div class="filter-content collapse show" id="collapse_1" style="">
+                                <div class="filter-content collapse show" id="collapse_1">
                                     <div class="card-body">
                                         <form class="pb-3">
                                             <div class="input-group">
@@ -274,7 +274,7 @@
                                         <h6 class="title">Brands </h6>
                                     </a>
                                 </header>
-                                <div class="filter-content collapse show" id="collapse_2" style="">
+                                <div class="filter-content collapse show" id="collapse_2">
                                     <div class="card-body">
                                         <label class="custom-control custom-checkbox">
                                             <input type="checkbox" checked="" class="custom-control-input">
@@ -312,7 +312,7 @@
                                         <h6 class="title">Price range </h6>
                                     </a>
                                 </header>
-                                <div class="filter-content collapse show" id="collapse_3" style="">
+                                <div class="filter-content collapse show" id="collapse_3">
                                     <div class="card-body">
                                         <input type="range" class="custom-range" min="0" max="100" name="">
                                         <div class="form-row">
@@ -337,7 +337,7 @@
                                         <h6 class="title">Sizes </h6>
                                     </a>
                                 </header>
-                                <div class="filter-content collapse show" id="collapse_4" style="">
+                                <div class="filter-content collapse show" id="collapse_4">
                                     <div class="card-body">
                                         <label class="checkbox-btn">
                                             <input type="checkbox">
@@ -369,7 +369,7 @@
                                         <h6 class="title">More filter </h6>
                                     </a>
                                 </header>
-                                <div class="filter-content collapse in" id="collapse_5" style="">
+                                <div class="filter-content collapse in" id="collapse_5">
                                     <div class="card-body">
                                         <label class="custom-control custom-radio">
                                             <input type="radio" name="myfilter_radio" checked=""
