--- a/page-user-login.html
+++ b/page-user-login.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="cache-control" content="max-age=604800" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>Website title - bootstrap html template</title>
+	<title>CreativeGoods</title>
 
 	<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
@@ -83,7 +83,7 @@
 					<div class="row align-items-center">
 						<div class="col-lg-3 col-sm-12 col-md-5">
 							<div class="brand-wrap">
-								<img class="logo" src="images/logo2.png">
+								<a href="index.html"><img class="logo" src="images/logo2.png"></a>
 							</div> <!-- brand-wrap.// -->
 						</div>
 						<div class="col-lg-5 col-sm-12 col-md-7">
