--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Hello World</title>
+    <title>Creative goods</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
@@ -67,7 +67,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-sm-12 col-md-5">
                         <div class="brand-wrap">
-                            <img class="logo" src="images/logo2.png">
+                            <a href="index.html"><img class="logo" src="images/logo2.png"></a>
                         </div> <!-- brand-wrap.// -->
                     </div>
                     <div class="col-lg-5 col-sm-12 col-md-7">
